sphincsR1vsR3
In file included from /usr/include/newlib/dirent.h:39,
                 from /home/bb/pico/pico-sdk/lib/mbedtls/library/x509_crt.c:102:
/usr/include/newlib/sys/dirent.h:10:2: error: #error "<dirent.h> not supported"
 #error "<dirent.h> not supported"
  ^~~~~
In file included from /home/bb/pico/pico-sdk/lib/mbedtls/library/x509_crt.c:102:
/usr/include/newlib/dirent.h:48:12: error: unknown type name 'DIR'
 int  dirfd(DIR *);
            ^~~
/usr/include/newlib/dirent.h:51:17: error: unknown type name 'DIR'
 int  fdclosedir(DIR *);
                 ^~~
/usr/include/newlib/dirent.h:53:1: error: unknown type name 'DIR'
 DIR *opendir(const char *);
 ^~~
/usr/include/newlib/dirent.h:54:1: error: unknown type name 'DIR'
 DIR *fdopendir(int);
 ^~~
/usr/include/newlib/dirent.h:56:11: error: unknown type name 'DIR'
   readdir(DIR *);
           ^~~
/usr/include/newlib/dirent.h:58:16: error: unknown type name 'DIR'
 int  readdir_r(DIR *__restrict, struct dirent *__restrict,
                ^~~
/usr/include/newlib/dirent.h:61:17: error: unknown type name 'DIR'
 void  rewinddir(DIR *);
                 ^~~
